--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,23 +3,26 @@ name: Deploy to S3
 on:
   push:
     branches:
-      - main  # Trigger deployment on pushes to the main branch
+      - main  # or any branch you want to deploy from
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+      - name: Install AWS CLI and boto3
+        run: |
+          sudo apt-get install -y python3-pip
+          pip3 install awscli boto3
+          aws --version
 
-    - name: Sync files to S3
-      run: |
-        aws s3 sync . s3://${{ secrets.S3_BUCKET }} --delete
+      - name: Deploy to S3
+        run: |
+          aws s3 sync . s3://dhruvsinghal.co.in --exclude ".git/" --exclude "README.md" --exclude ".github/"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
