--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://a1training-dhruv --exclude ".git/" --exclude "README.md" --exclude ".github/"
+          aws s3 sync . s3://dhruvsinghal.co.in --exclude ".git/" --exclude "README.md" --exclude ".github/"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
